[tool.poetry]
name = "signum-explorer"
version = "1.7.0"
description = "Signum Blockchain Explorer"
authors = ["Lev Lybin <lev.lybin@gmail.com>"]
maintainers = [
    "frankTheTank72 <39116221+frankTheTank72@users.noreply.github.com>",
    "Pir8Radio <pir8radio@gmail.com>",
    "Lev Lybin <lev.lybin@gmail.com>",
    "jjos2372 <jjos2372@gmail.com>",
    "ohager <oliver@devbutze.com>",
    "Anton Smolin <saa@it24.pw>",
    "gittrekt <76663968+gittrekt@users.noreply.github.com>",
    "jurver98 <jur@hostingwire.net>",
    "Codacy Badger <badger@codacy.com>",
    "Julia <jur@hostingwire.net>",
    "shefass <39196313+shefass@users.noreply.github.com>",
]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://chain.signum.network/"
repository = "https://github.com/signum-network/signum-explorer"

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 120
target-version =  ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  | migrations
)/

'''

[tool.isort]
profile = "black"
src_paths = ["burst", "cabinet", "config", "db", "java_wallet", "scan"]
line_length = 120
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
